<resources>
    <string name="app_name">HRHJ</string>

    <string name="bottom_menu_home">#홈</string>
    <string name="bottom_menu_search">#검색</string>
    <string name="bottom_menu_add">#추가</string>
    <string name="bottom_menu_calendar">#캘린더</string>
    <string name="bottom_menu_setting">#설정</string>

    <string name="popup_menu_take_pic">사진 촬영</string>
    <string name="popup_menu_select_pic">기존 사진 선택</string>
    <string name="popup_menu_basic_pic">기본 이미지 사용</string>

    <string name="fragment_home_date">작성일</string>

    <string name="fragment_search_text_box">검색</string>
    <string name="fragment_search_no_result">검색 결과가 없습니다.</string>

    <string name="fragment_add_actionbar_close">CLOSE</string>
    <string name="fragment_add_actionbar_next">다음</string>
    <string name="fragment_add_text_actionbar_done">완료</string>

    <string name="fragment_add_basic_pic">기본</string>
    <string name="fragment_add_take_pic">촬영</string>
    <string name="fragment_add_select_pic">갤러리</string>

    <string name="fragment_calendar_sun">일</string>
    <string name="fragment_calendar_mon">월</string>
    <string name="fragment_calendar_tue">화</string>
    <string name="fragment_calendar_wed">수</string>
    <string name="fragment_calendar_thu">목</string>
    <string name="fragment_calendar_fri">금</string>
    <string name="fragment_calendar_sat">토</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_initial_page">InitialPageActivity</string>
</resources>
