<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/takePicMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/popup_menu_take_pic"
        android:textSize="20sp"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/selectPicMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/popup_menu_select_pic"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/basicPicMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/popup_menu_basic_pic"
        android:textSize="20sp" />
</LinearLayout>